--- a/package.json
+++ b/package.json
@@ -18,18 +18,18 @@
   },
   "homepage": "https://github.com/dmhalejr/applitools-reproducible-example#readme",
   "dependencies": {
-    "@applitools/eyes-selenium": "^4.16.2",
-    "eyes.selenium": "^3.6.3",
-    "selenium-webdriver": "^4.0.0-alpha.1",
-    "typescript": "^3.4.3"
+    "@applitools/eyes-selenium": "^4.31.7",
+    "dotenv": "^8.2.0",
+    "eyes.selenium": "^3.8.2",
+    "selenium-webdriver": "^4.0.0-alpha.5",
+    "typescript": "^3.6.4"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.11",
-    "@types/selenium-webdriver": "^4.0.0",
-    "babel-jest": "^24.7.1",
-    "jest": "^24.7.1",
-    "npm": "^6.9.0",
-    "ts-jest": "^24.0.2",
-    "tslint": "^5.15.0"
+    "@types/jest": "^24.0.20",
+    "@types/selenium-webdriver": "^4.0.5",
+    "babel-jest": "^24.9.0",
+    "jest": "^24.9.0",
+    "ts-jest": "^24.1.0",
+    "tslint": "^5.20.0"
   }
 }
